--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="carteiraVirtual">
 <head>
     <title>Carteira Virtual</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilo.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="carteiravirtual.js"></script>
 </head>
-<body>
+<body ng-controller="carteiraVirtualCtrl">
     <div class="container">
 
-        <!-- <div class="row col-sm-12">
-            <h1 id="titulo" class="bottom-space">Carteira Virtual</h1>
-        </div> -->
+        <div class="row col-sm-12">
+            <h1 id="titulo" class="bottom-space">{{app}}</h1>
+        </div>
             
         
         <div class="row bottom-space">
@@ -20,7 +22,7 @@
                 <div class="card mb-3 painel-carteira">
                     <div class="card-body">
                       <h3 class="card-title painel-titulo">Caixa</h3>
-                      <h3 class="card-text painel-conteudo">R$ 1,00</h3>
+                      <h3 class="card-text painel-conteudo">{{totais.caixa}}</h3>
                     </div>
                   </div>
             </div>
@@ -29,7 +31,7 @@
                 <div class="card mb-3 painel-carteira">
                     <div class="card-body">
                       <h3 class="card-title painel-titulo">Dívida</h3>
-                      <h3 class="card-text painel-conteudo">R$ 1,00</h3>
+                      <h3 class="card-text painel-conteudo">{{totais.divida}}</h3>
                     </div>
                   </div>
             </div>
@@ -38,12 +40,11 @@
         <div class="row bottom-space">
             <div class="col-12">
                 <div class="input-group mb-3">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">Tipo</button>
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">{{tipo}}</button>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Caixa</a></li>
-                      <li><a class="dropdown-item" href="#">Dívida</a></li>
+                      <li><button class="dropdown-item" ng-click="mudaTipo()">{{!tipo}}</button></li>
                     </ul>
-                    <input type="number" class="form-control" placeholder="Digite um valor em R$">
+                    <input type="number" class="form-control" placeholder="Digite um valor em R$" ng-model="registro">
                   </div>
             </div>
         </div>
@@ -51,7 +52,7 @@
         <div class="row bottom-space">
             <div class="col-xs-12">
                 <div class="d-flex justify-content-end">
-                    <button class="btn btn-success btn-lg shadow">Adicionar</button>
+                    <button class="btn btn-success btn-lg shadow" ng-click="Adicionar(registro)" ng-abled="verificaRegistro(registro)">Adicionar</button>
                 </div>
             </div>
         </div>
