--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="carteiravirtual.js"></script>
+    <script src="filters/caixadividafilter.js"></script>
 </head>
 <body ng-controller="carteiraVirtualCtrl">
     <div class="container">
@@ -40,9 +41,9 @@
         <div class="row bottom-space">
             <div class="col-12">
                 <div class="input-group mb-3">
-                    <button class="btn btn-secondary dropdown-toggle shadow" type="button" data-bs-toggle="dropdown" ng-class="{'caixa': tipo, 'divida': !tipo}">{{tipo}}</button>
+                    <button class="btn btn-secondary dropdown-toggle shadow" type="button" data-bs-toggle="dropdown" ng-class="{'caixa': tipo, 'divida': !tipo}">{{tipo | caixadivida}}</button>
                     <ul class="dropdown-menu">
-                      <li><button class="dropdown-item" ng-click="mudaTipo()">{{!tipo}}</button></li>
+                      <li><button class="dropdown-item" ng-click="mudaTipo()">{{!tipo | caixadivida}}</button></li>
                     </ul>
                     <input type="number" class="form-control shadow" placeholder="Digite um valor em R$" ng-model="valor">
                   </div>
@@ -70,7 +71,7 @@
                     <tr ng-repeat="registro in registros">
                         <td>{{registro.data | date: 'dd/MM/yyyy'}}</td>
                         <td>{{registro.data | date: 'HH:mm'}}</td>
-                        <td>{{registro.tipo}}</td>
+                        <td>{{registro.tipo | caixadivida}}</td>
                         <td>{{registro.valor}}</td>
                         <td></td>
                     </tr>
